[Chore] gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-FLOVRouter.swift
 *.xcconfig
 googleService.plist
 
@@ -20,6 +19,7 @@ Pods/
 
 ## User settings
 xcuserdata/
+*.xcuserdatad/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
