[Setting] SPM및 프로젝트 세팅 변경, gitignore 설정

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.xcconfig
-googleService.plist
+GoogleService-Info.plist
 
 # Created by https://www.toptal.com/developers/gitignore/api/cocoapods,swift,xcode
 # Edit at https://www.toptal.com/developers/gitignore?templates=cocoapods,swift,xcode
