--- a/FLOV/Info.plist
+++ b/FLOV/Info.plist
@@ -60,8 +60,8 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoadsInWebContent</key>
-		<true/>
+<!--		<key>NSAllowsArbitraryLoadsInWebContent</key>-->
+<!--		<true/>-->
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
